--- a/app/views/tests.html
+++ b/app/views/tests.html
@@ -172,8 +172,9 @@
 
 
 <style>
-	:hover { stroke: cornflowerblue; }
+	.path:hover { stroke: cornflowerblue; }
 </style>
+
 
 <svg version="1.1" viewBox="0 0 500 500">
 
@@ -194,6 +195,7 @@
   
   <image xlink:href="../images/sbol/assembly-scar.jpeg" ng-attr-x="{{circleTestX}}" ng-attr-y="{{circleTestY}}" height="40px" width="40px"/>
   
+  <text ng-attr-x="{{circleTestX-20}}" ng-attr-y="{{circleTestY+50}}" fill="red">I love SVG!</text>
   
 </svg>
 
