--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,1 +1,30 @@
-<p>This is the about view.</p>
+<div class="row">
+    <div class="col-md-3 col-sm-3">
+        <img class="img-thumbnail img-responsive photo" src="../images/moncho.jpg" />
+    </div>
+    <div class="col-md-9 col-sm-9">
+       
+        <h2>Hi! I'm Moncho Pena</h2>
+        
+        <blockquote>
+		   <p>Mainly I like programming: Angular JS, PHP, Node JS, Shell Script, C# ... FLOSS Fan. Addicted to Debian. Arduino Teacher. Passionate robotics. Codigo UK C.T.O.</p>
+	    </blockquote>
+ 
+        <p>
+         This is a challenge made by <a href="http://deskgen.com/">DeskGen</a>.
+        </p>
+        
+        <p>
+	      More information in Github <a href="https://github.com/DeskGen/dnaviewer">https://github.com/DeskGen/dnaviewer</a>.
+        </p>
+        
+        <p>You can find me:</p>
+        
+        <ul>
+	      <li><a href="https://github.com/monchopena">Github</a></li>
+	      <li><a href="https://twitter.com/#!/monchopena">Twitter</a></li>
+          <li><a href="https://plus.google.com/118005874602757929752">Google+</a></li>
+          <li><a href="http://www.linkedin.com/in/ramonpena">Linkedin</a></li>
+        </ul>
+    </div>
+</div>
