--- a/app/views/404.html
+++ b/app/views/404.html
@@ -1,9 +1,13 @@
-<h1>Ups an error occurred during JSON charge</h1>
+<div class="row">
 
-<p>
-Please: <a href="/#/">Try again</a>
-</p>
+	<h1>Ups an error occurred during JSON charge</h1>
+	
+	<p>
+	Please: <a href="/#/">Try again</a>
+	</p>
+	
+	<p>
+	If problem persists, please contact with <a href="mailto:ramon.pena.rodriguez@gmail.com">administrator</a>.
+	</p>
 
-<p>
-If problem persists, please contact with <a href="mailto:ramon.pena.rodriguez@gmail.com">administrator</a>.
-</p>
+</div>
