Bug fixed: showing Bases

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -125,6 +125,7 @@
 	        
 			</div>
 
+		</div>
 </div>
 
 <!--
@@ -132,9 +133,7 @@
 	TODO: Show in horizontal
 -->
 <div class="row marketing bases" ng-show="selectedDNAFeature.dnafeature.pattern.bases">
-<pre>
-{{selectedDNAFeature.dnafeature.pattern.bases}}
-</pre>
+<pre>{{selectedDNAFeature.dnafeature.pattern.bases}}</pre>
 </div>
 
 
